- The 'vender' command now shows vender's name and index.
- Support "That person is in another deal." error.
- 'pl' command now displays everyone's level.
- tables/skills.txt: updated for almost all advanced class skills now.
- New "<player> got married!" message.
- Taekwon, Star Gladiator, Flying Star Gladiator and Soul Linker jobs
  are now recognized.

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- storage [<eq|u|nu>]
  Only list equipments (eq), usable (u), or non usable (nu) items.
- whoami
  Displays your character and account ID.
- damage
  Displays the monsters and skills that damaged you.
- help [command]
  not new but updated and more usefull
  you get now all options for a specific command
- guild break <guild name>
  Disband your guild.
- guild create <name>
  Create a guild.
- guild kick <list number> <reason>
  Kick a guild member out of the guild.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.

- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.
  Only enable this if you know what you're doing.
  (Note: You cannot use items while storage is open.)
- itemsTakeAuto_new (flag)